forth/test/fail/test_redundant_try_all_word.af
true .try_all

fun: test_redundant_try_all_word { -- err }
  [ true .try_all ]
end
